--- a/style.css
+++ b/style.css
@@ -1,8 +1,19 @@
+@font-face {
+	font-family: Bebas Neue;
+	src: url(fonts/BebasNeue.otf);
+}
+
 body {
 	font-family: 'PT Sans';
 	font-size: 18px;
 	color: white;
 	background-color: black;
+}
+
+h1 {
+	font-family: 'Bebas Neue';
+	font-weight: lighter;
+	font-size: 40px;
 }
 
 .header {
