Testing different font weights

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 body {
-	font-family: 'Petita Medium';
+	font-family: 'Petita Bold';
 	font-size: 18px;
 	color: white;
 	background-color: black;
