Revert "Testing different font weights"
This reverts commit 174539d0aca2cb2441ee0959a382d900687a897b.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 body {
-	font-family: 'Petita Bold';
+	font-family: 'Petita Medium';
 	font-size: 18px;
 	color: white;
 	background-color: black;
