--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ h1 {
 	margin-bottom: 0px;
 }
 
+h2 {
+	margin-top: 10px;
+}
+
 .header {
 	width: 1024px;
 	margin-left: auto;
@@ -49,24 +53,14 @@ h1 {
 	transition: background-color 0.1s;
 }
 
-.nav ul {
-	list-style-type: none;
-	padding: 0px;
-}
-
-.nav li {
-	float: left;
+.nav a {
+	display: inline-block;
+	width: 24%;
+	color: inherit;
+	text-decoration: none;
+	text-align: center;
 	border: 1px solid gray;
 	border-radius: 3px;
-	margin: 5px;
-	width: 23%;
-	text-align: center;
-}
-
-.nav a {
-	color: white;
-	text-decoration: none;
-	display: block;
 }
 
 .nav a:hover {
