--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ h1 {
 	font-family: 'Bebas Neue';
 	font-weight: lighter;
 	font-size: 50px;
+	line-height: 140%;
 	text-align: center;
 	margin-bottom: 0px;
 }
@@ -70,6 +71,7 @@ h2 {
 
 /*mini navigation bar*/
 .mininav {
+	font-size: 18px;
 	color: #555555;
 	text-align: center;
 	margin-bottom: 20px;
@@ -99,9 +101,15 @@ h2 {
 }
 
 .section {
+	width: 850px;
 	background-color: #02324E;
+	margin-left: auto;
+	margin-right: auto;
 	margin-bottom: 20px;
-	padding: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	padding-left: 25px;
+	padding-right: 25px;
 	border-radius: 5px;
 	overflow: auto;
 }
